[package]
name = "rust_craft"
version = "0.1.0"
authors = ["Graham Swain <gnswain2@catamount.wcu.edu>", "Mohammed Bukhattala <mbukhattala1@catamount.wcu.edu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
